# palka

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  README.md  main.cpp
.github/workflows/: cmake.yml
Shaders/: Default.frag  Default.vert  Index.frag  light.frag  light.vert  material.frag  material.vert  test.frag
cmake/: FindGLEW.cmake  FindGLM.cmake  FindSDL_image.cmake  glfw3Targets-release.cmake  glfw3Targets.cmake  rttr-config.cmake
glad/: CMakeLists.txt
glad/include/glad/: gl.h  glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_sdl.cpp
imgui_glfw/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp
palka_core/: BlendMode.cpp  BlendMode.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  ConsoleLog.cpp  ConsoleLog.h  Context.cpp  Context.h  DebugDraw.cpp  DebugDraw.h  Drawable.h  Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  Matrix.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  RawPtrWrapper.h  Rect.cpp  Rect.h  Rectangle.cpp  Rectangle.h  ReflectionDebug.h  RenderContext.cpp  RenderContext.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  (+34 more)
palka_entities/: Object.cpp  Object.h
stb/: CMakeLists.txt
