cmake_minimum_required(VERSION 3.19)
project(IMGUI)

file(GLOB IMGUI_SRC RELATIVE "${CMAKE_SOURCE_DIR}/palka_core/imgui" "*.cpp")
#file(GLOB_RECURSE IMGUI_HEADER RELATIVE "${CMAKE_SOURCE_DIR}/imgui" "../imgui/*.h")
string(REPLACE "../../imgui/imgui_impl_win32.cpp" "" out ${IMGUI_SRC})
if (WIN32)
    add_library(IMGUI STATIC imgui.cpp imgui_demo.cpp imgui_draw.cpp imgui_tables.cpp imgui_widgets.cpp imgui_impl_win32.cpp)
endif (WIN32)
if (UNIX)
add_library(IMGUI OBJECT imgui.cpp imgui_demo.cpp imgui_draw.cpp imgui_tables.cpp imgui_widgets.cpp)
endif (UNIX)
target_compile_definitions(IMGUI PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLAD)
target_include_directories(IMGUI PUBLIC ".")
